# Ton-programming-language

./: .gitignore  CMakeLists.txt  Ton.g4
antlr4_generated/: Ton.interp  Ton.tokens  TonBaseListener.h  TonBaseVisitor.h  TonLexer.cpp  TonLexer.h  TonLexer.interp  TonListener.h  TonParser.cpp  TonParser.h  TonVisitor.h
docs/: audio.md  brainstorm.md  doc.md  setup.md  syntax.md
examples/: errorexample_math2.txt  example_recur.ton  example_shout.txt
examples/Music_examples/: example1.txt  example2.txt  example3.txt  example4.txt  example5.txt  example6.txt  sound_op.ton
examples/error_examples/: errorexample1.txt  errorexample1_listener.txt  errorexample3.txt  errorexample4.txt  errorexample5.txt  errorexample6.txt
examples/example_others/: example_array_ops.ton  example_arrays.ton  example_char.txt  example_if_on_string.txt  example_loop_array.ton  example_scope_issue.txt  example_scopes.txt
examples/math_examples/: errorexample2.txt  errorexample_math1.txt  errorexample_math2.txt  example_parentheses_priority.txt  relational_example.ton
include/core/: MusicBase.h  Scope.h  Timeline.h
include/interpreter/: TonInterpreter.h
include/listener/: TonDeclarationListener.h  TonSyntaxErrorListener.h
include/typechecker/: TonTypeChecker.h
src/: main.cpp
src/interpreter/: TonInterpreter.cpp
src/listener/: TonDeclarationListener.cpp  TonSyntaxErrorListener.cpp
src/typechecker/: TonTypeChecker.cpp
